# Truck_OCA

./: README.md
WGV/src/em_planner_ros/: CMakeLists.txt
WGV/src/em_planner_ros/common/: cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h
WGV/src/em_planner_ros/emplanner/include/: st_qp.h
WGV/src/em_planner_ros/emplanner/src/: em_planner.cpp  st_dp.cpp  st_qp.cpp
WGV/src/em_planner_ros/msg/: PlanningResult.msg  TrajectoryPoint.msg
WGV/src/em_planner_ros/src/: EnvironmentPublisher.cpp  main2.cpp
WGV_0729/: WGV.code-workspace
WGV_0729_v2/: frames.gv
WGV_0729_v2/.catkin_tools/profiles/default/: devel_collisions.txt
WGV_0729_v2/src/em_planner_ros/: CMakeLists.txt
WGV_0729_v2/src/em_planner_ros/common/: cartesian_frenet_conversion.cc  discrete_points_math.h
WGV_0729_v2/src/em_planner_ros/common/osqp/include/: auxil.h
WGV_0729_v2/src/em_planner_ros/emplanner/src/: st_qp.cpp
WGV_0729_v2/src/em_planner_ros/msg/: FrenetPoint.msg  Localization.msg  Obstacle.msg  ObstacleList.msg  TrajectoryPoint.msg
WGV_0729_v2/src/em_planner_ros/scenario/include/: sce1.h  sce2.h  sce4.h
WGV_0729_v2/src/em_planner_ros/scenario/src/: sce3.cpp  sce4.cpp
WGV_0729_v2/src/em_planner_ros/src/: EnvironmentPublisher.cpp  EnvironmentPublisher.h  main.cpp  main2.cpp
WGV_0729_v2/src/show_planning_results_simple/: CMakeLists.txt  package.xml
WGV_0729_v2/src/show_planning_results_simple/config/: Planning_results.rviz
WGV_0729_v2/src/show_planning_results_simple/src/: visualizer.cpp
WGV_0729_v3/: WGV.code-workspace
WGV_0729_v3/src/em_planner_ros/: CMakeLists.txt
WGV_0729_v3/src/em_planner_ros/common/: data_struct.h  discrete_points_math.cc
WGV_0729_v3/src/em_planner_ros/emplanner/include/: em_planner.h  sl_dp.h  sl_qp.h  st_dp.h
WGV_0729_v3/src/em_planner_ros/emplanner/src/: em_planner.cpp  sl_dp.cpp  sl_qp.cpp  st_dp.cpp
WGV_0729_v3/src/em_planner_ros/msg/: PlanningResult.msg  VehicleStatus.msg
WGV_0729_v3/src/em_planner_ros/scenario/include/: sce3.h  sce4.h
WGV_0729_v3/src/em_planner_ros/scenario/src/: sce1.cpp  sce2.cpp
WGV_0729_v3/src/em_planner_ros/src/: EnvironmentPublisher.cpp  EnvironmentPublisher.h
WGV_0729_v3/src/show_planning_results_simple/config/: Planning_results.rviz
WGV_0729_v3/src/show_planning_results_simple/launch/: visualizer.launch
WGV_0729_v3/src/show_planning_results_simple/src/: visualizer.cpp
